# Climb-Together

./: .gitignore  1.txt  CMakeLists.txt  build.sh  build_mingw.sh  run.sh
include/: collidable.hpp  constants.hpp  game.hpp  game_menu.hpp  object.hpp
include/Animation/: animation_component.hpp
include/Entities/: entity.hpp  player.hpp
include/Interactive/: interactivable.hpp
include/UI/: button.hpp  ui_element.hpp
include/World/: world.hpp
resources/: gora.tmx  rule1.tmx  testWorld.tmx
src/: collidable.cpp  game.cpp  game_menu.cpp  init_menu.cpp  main.cpp  object.cpp
src/Entity/: entity.cpp  player.cpp
src/UI/: button.cpp  hud.cpp  ui_element.cpp
src/World/: world.cpp
